feat: add GetRecipeByOrigin
